2018-05-16  Andy VanWagoner  <andy@vanwagoner.family>

        Add support for Intl NumberFormat formatToParts
        https://bugs.webkit.org/show_bug.cgi?id=185375

        Reviewed by Yusuke Suzuki.

        Add flag for NumberFormat formatToParts.

        * wtf/FeatureDefines.h:

2018-05-16  Yusuke Suzuki  <utatane.tea@gmail.com>

        Unreviewed, follow-up after r231762
        https://bugs.webkit.org/show_bug.cgi?id=185589

        Addresses darin's suggestions to improve timeClip.

        * wtf/DateMath.cpp:
        (WTF::timeClip):

2018-05-14  Yusuke Suzuki  <utatane.tea@gmail.com>

        [Win] Use C++17 in MSVC
        https://bugs.webkit.org/show_bug.cgi?id=185232

        Reviewed by Alex Christensen.

        Disable some WebKit defined C++17 features for MSVC.

        * wtf/StdLibExtras.h:

2018-05-14  Yusuke Suzuki  <utatane.tea@gmail.com>

        [JSC] timeClip(-0) should produce +0
        https://bugs.webkit.org/show_bug.cgi?id=185589

        Reviewed by Saam Barati.

        According to the spec[1], timeClip(-0) should produce +0.
        We achieve this by adding 0.0 to the result of trunc(t).

        [1]: https://tc39.github.io/ecma262/#sec-timeclip

        * wtf/DateMath.cpp:
        (WTF::timeClip):

2018-05-13  Geoffrey Garen  <ggaren@apple.com>

        Simplified Mach exception handling
        https://bugs.webkit.org/show_bug.cgi?id=185595

        Reviewed by Keith Miller.

        * wtf/threads/Signals.cpp:
        (WTF::startMachExceptionHandlerThread): Use mach_msg_server_once instead
        of duplicating its functionality. Separate error handling logic from
        program logic to help program logic stand out. Use
        DISPATCH_TARGET_QUEUE_* instead of explicitly fetching a queue.

        Also, we don't need the high priority queue. The kernel donates a
        priority voucher from the exception thread to the receiver thread, and
        mach_msg_server_once takes care to forward that voucher.
