@@ -1,3 +1,15 @@
+2018-05-17  Zalan Bujtas  <zalan@apple.com>
+
+        Add ASSERT_NOT_IMPLEMENTED_YET() macro
+        https://bugs.webkit.org/show_bug.cgi?id=185713
+
+        Reviewed by Antti Koivisto.
+
+        To mark unimplemented code paths.
+
+        * wtf/Assertions.cpp:
+        * wtf/Assertions.h:
+
 2018-05-16  Andy VanWagoner  <andy@vanwagoner.family>
 
         Add support for Intl NumberFormat formatToParts
